[package]
name = "eventbrite_riichi"
version = "0.3.0"
edition = "2021"

[dependencies]
chrono = "0.4.44"
chrono-tz = "0.10.4"
clap = { version = "4.6.1", features = ["derive", "env"] }
ron = "0.12.1"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
strum = { version = "0.28.0", features = ["derive"] }
ureq = { version = "3.3.0", features = ["json"] }
# example = "1.0.0"
